# f1-race-prediction

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
data/: 2018_season_data.csv  2019_season_data.csv  2020_season_data.csv  2021_season_data.csv  2022_season_data.csv  2023_season_data.csv  2024_season_data.csv  2025_season_data.csv
docs/: ruff-guide.md  uv-guide.md
models/: f1_model.pkl
src/: app.py  feature_engineering.py  fetch_data.py  prepare_data.py  train_model.py  update_model.py  utils.py
tests/: __init__.py  conftest.py  test_utils.py
